ci: smoke-run benchmarks to catch breakage
Each benchmark has now a `smoke` JMH param (default false) to shrink its own
fixture for a fast CI sanity run.

A benchmarks-smoke PR-validation job runs every benchmark once with `-foe` (fail on error) true,
asserting execution rather than timing.

The launcher passes the preview, native-access, and `--sun-misc-unsafe-memory-access=allow` flags;
JJMH inherits them on each fork, hence `@Fork` doesn't need jvmArgs.

on-behalf-of: @camptocamp <info@camptocamp.com>